--- a/frontend/src/scenes/retention/RetentionLineGraph.scss
+++ b/frontend/src/scenes/retention/RetentionLineGraph.scss
@@ -3,14 +3,18 @@
 // Here we override based on retention-container the graph-container styling, so
 // as to not change the global styling. We need the extra nesting to ensure we
 // are more specific than the other insights css
-.insights-graph-container {
-    .retention-container {
-        .graph-container {
-            position: relative;
-            margin-top: 0.5rem;
-            margin-bottom: 0.5rem;
-            height: 300px;
-            width: 100%;
+// NOTE: I get different css ordering in storybooks as opposed to via `yarn
+// start-http` so that's something to watch out for if you update this
+.insights-page {
+    .insights-graph-container {
+        .retention-container {
+            .graph-container {
+                position: relative;
+                margin-top: 0.5rem;
+                margin-bottom: 1rem;
+                height: 300px;
+                width: 100%;
+            }
         }
     }
 }
