--- a/frontend/src/scenes/persons/PersonHeader.scss
+++ b/frontend/src/scenes/persons/PersonHeader.scss
@@ -1,6 +1,10 @@
 @import '~/vars';
 
 .person-header {
+    .profile-picture {
+        transition: opacity 200ms ease;
+        margin-right: 0.5rem;
+    }
     a:hover {
         .profile-picture {
             opacity: 0.75;
