--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -768,6 +768,12 @@ code.code {
 
 // AntD overrrides, placed inside `body` to increase specifity (nicely avoiding the need for !important)
 body {
+    h1,
+    h2,
+    h3,
+    h4 {
+        color: var(--text-default);
+    }
     h5 {
         font-size: 11px;
         font-weight: 600;
@@ -777,7 +783,6 @@ body {
         margin-bottom: 0.25rem;
         line-height: 2;
     }
-
     // AntD uses its own border color for the bottom of tab lists, but we want to use `var(--border)`
     .ant-tabs-top,
     .ant-tabs-bottom {
