--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -44,7 +44,7 @@
     }
     h5 {
         line-height: 1.5rem;
-        margin-bottom: 0.125rem;
+        margin-bottom: 0;
     }
     h4 {
         overflow: hidden;
