Add margin-left to site popover side link as a precaution

--- a/frontend/src/layout/navigation/TopBar/TopBar.scss
+++ b/frontend/src/layout/navigation/TopBar/TopBar.scss
@@ -141,6 +141,7 @@
 
 .SitePopover__side-link {
     color: var(--primary);
+    margin-left: 0.5rem;
     font-weight: 600;
     font-size: 0.8125rem;
     text-align: right;
