remove old preview page

--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -2,6 +2,10 @@
 
 .experiment-result,
 .experiment-form {
+    .person-selection {
+        padding-top: $default_spacing;
+        border-top: 1px solid $border;
+    }
     .metrics-selection {
         border-top: 1px solid $border;
         padding-top: $default_spacing;
@@ -15,13 +19,6 @@
             }
             .row-action-btn {
                 color: $primary_alt;
-            }
-        }
-
-        &.person-selection {
-            label {
-                font-size: 16px;
-                font-weight: 600;
             }
         }
     }
