--- a/frontend/src/lib/components/icons/Splotch.scss
+++ b/frontend/src/lib/components/icons/Splotch.scss
@@ -2,26 +2,25 @@
     width: 1.5rem;
     height: 1.5rem;
     padding: 0.25rem;
-}
-
-.Splotch__paint {
-    width: 1rem;
-    height: 1rem;
-    border-radius: var(--radius);
-    &.blue {
-        background: var(--blue);
-    }
-    &.purple {
-        background: var(--purple);
-    }
-    &.green {
-        background: var(--green);
-    }
-    &.black {
-        background: var(--text-default);
-    }
-    &.white {
-        background: #fff;
-        border: 1px solid var(--border);
+    .paint {
+        width: 1rem;
+        height: 1rem;
+        border-radius: var(--radius);
+        &.blue {
+            background: var(--blue);
+        }
+        &.purple {
+            background: var(--purple);
+        }
+        &.green {
+            background: var(--green);
+        }
+        &.black {
+            background: var(--text-default);
+        }
+        &.white {
+            background: #fff;
+            border: 1px solid var(--border);
+        }
     }
 }
