add edit button and clean up things

--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -102,3 +102,10 @@
         }
     }
 }
+
+.confirmation {
+    .draft-header {
+        margin-bottom: $default_spacing;
+        border-bottom: 1px solid $border;
+    }
+}
