--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -198,6 +198,10 @@ mark {
     border-radius: $radius;
 }
 
+.uppercase {
+    text-transform: uppercase;
+}
+
 // Supplement text, such as email under user name
 .supplement {
     text-overflow: ellipsis;
