--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -108,4 +108,9 @@
         margin-bottom: $default_spacing;
         border-bottom: 1px solid $border;
     }
+
+    .stop-experiment {
+        background-color: $danger;
+        color: white;
+    }
 }
