Experiment launch page progress (#7759)
Co-authored-by: Neil Kakkar <neilkakkar@gmail.com>

--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -102,3 +102,15 @@
         }
     }
 }
+
+.confirmation {
+    .draft-header {
+        margin-bottom: $default_spacing;
+        border-bottom: 1px solid $border;
+    }
+
+    .stop-experiment {
+        background-color: $danger;
+        color: white;
+    }
+}
