Simplify and fix dashboard items grid sizing

--- a/frontend/src/scenes/dashboard/DashboardItems.scss
+++ b/frontend/src/scenes/dashboard/DashboardItems.scss
@@ -1,5 +1,9 @@
 @import '~/vars';
 
+.dashboard-items-wrapper {
+    width: 100%; // This provides the width for the dashboard items grid
+}
+
 .dashboard-item {
     display: block;
     background: white;
