--- a/frontend/src/scenes/session-recordings/player/styles.scss
+++ b/frontend/src/scenes/session-recordings/player/styles.scss
@@ -195,6 +195,7 @@
 
     .rrweb-speed-toggle {
         cursor: pointer;
+        margin-right: $default_spacing;
     }
 
     .rrweb-inactivity-toggle {
