--- a/frontend/src/scenes/trends/PersonsModal.scss
+++ b/frontend/src/scenes/trends/PersonsModal.scss
@@ -36,6 +36,7 @@
     .person-ids {
         display: flex;
         flex-direction: column;
+        width: 100%;
     }
 
     .user-count-subheader {
