Use flex instead of width

--- a/frontend/src/scenes/trends/PersonsModal.scss
+++ b/frontend/src/scenes/trends/PersonsModal.scss
@@ -36,7 +36,7 @@
     .person-ids {
         display: flex;
         flex-direction: column;
-        width: 100%;
+        flex: 1;
     }
 
     .user-count-subheader {
