--- a/frontend/src/scenes/toolbar-launch/ToolbarLaunch.scss
+++ b/frontend/src/scenes/toolbar-launch/ToolbarLaunch.scss
@@ -10,6 +10,9 @@
             &.suggestion {
                 color: $text_muted_alt;
             }
+            &.authorized {
+                color: var(--success);
+            }
         }
         .actions-col {
             display: flex;
