Make background of insight graphs white

--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -25,7 +25,7 @@
 
     .insights-graph-container {
         margin-bottom: $default_spacing;
-        background-color: $bg_side;
+        background-color: #fff;
 
         .ant-card-head {
             border-bottom: 1px solid $border;
