make label clickable

--- a/frontend/src/scenes/session-recordings/player/styles.scss
+++ b/frontend/src/scenes/session-recordings/player/styles.scss
@@ -203,6 +203,7 @@
         flex-direction: row;
         align-items: center;
         white-space: nowrap;
+        cursor: pointer;
 
         .inactivity-label {
             font-size: 14px;
