--- a/frontend/src/scenes/insights/InsightsTable/InsightsTable.scss
+++ b/frontend/src/scenes/insights/InsightsTable/InsightsTable.scss
@@ -5,18 +5,17 @@
     align-items: center;
 
     .edit-icon {
-        color: $primary;
+        color: var(--primary);
         cursor: pointer;
-        padding-right: 4px;
+        margin-left: 0.5rem;
     }
 
     .insights-label {
-        flex-grow: 1;
         &.editable {
             cursor: pointer;
             .ant-typography {
-                color: $primary;
-                font-weight: $medium;
+                color: var(--primary);
+                font-weight: 500;
             }
         }
     }
