move variants under parameters, allow variant deletion, and disable editing for control group variant

--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -110,6 +110,14 @@
             padding-top: $default_spacing / 2;
         }
     }
+
+    .ant-input-number-disabled {
+        color: black;
+    }
+
+    .ant-input[disabled] {
+        color: black;
+    }
 }
 
 .confirmation {
