--- a/frontend/src/lib/components/InsightLegend/InsightLegend.scss
+++ b/frontend/src/lib/components/InsightLegend/InsightLegend.scss
@@ -38,6 +38,7 @@
             .insights-label {
                 margin-left: $default_spacing / 2;
                 width: 100%;
+                font-size: 0.75rem;
             }
         }
     }
