--- a/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
+++ b/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
@@ -40,6 +40,9 @@
                     white-space: nowrap;
                 }
             }
+            .series-column-header {
+                margin-left: $default_spacing / 4;
+            }
         }
 
         .LemonTable__content > table > tbody {
