--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -573,6 +573,7 @@ code.code {
     align-items: center;
     justify-content: center;
     pointer-events: none;
+    flex-shrink: 0;
 
     // variants
     &.funnel-step-glyph {
