--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -90,11 +90,6 @@
     .experiment-preview {
         margin-bottom: $default_spacing;
         border-bottom: 1px solid $border;
-        .preview-row {
-            border-bottom: 1px solid $border;
-            padding-bottom: $default_spacing;
-            margin-bottom: $default_spacing;
-        }
     }
 
     .feature-flag-variant {
@@ -171,5 +166,25 @@
         padding: 8px;
         background: rgba(119, 185, 108, 0.1);
         border-radius: 4px;
+
+    .preview-conversion-goal-num {
+        height: 24px;
+        width: 24px;
+        text-align: center;
+        background-color: $bg_side;
+        color: $primary_alt;
+        font-weight: 700;
+        margin-right: $default_spacing / 2;
+    }
+}
+
+.experiment-preview-row {
+    border-bottom: 1px solid $border;
+    padding-bottom: $default_spacing;
+    margin-bottom: $default_spacing;
+    &:last-child {
+        border-bottom: none;
+        padding-bottom: 0;
+        margin-bottom: 0;
     }
 }
