separate definition drawer into separate reusable component and make it accessible app wide

--- a/frontend/src/lib/components/DefinitionDrawer/DefinitionDrawer.scss
+++ b/frontend/src/lib/components/DefinitionDrawer/DefinitionDrawer.scss
@@ -1,4 +1,6 @@
-.legacy-definition-drawer {
+.definition-drawer {
+    z-index: 1050 !important; // Above taxonomic filter poppers which are at 1049
+
     .ant-collapse-ghost > .ant-collapse-item > .ant-collapse-content > .ant-collapse-content-box {
         padding-top: 0;
     }
