--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -163,4 +163,13 @@
         padding-top: $default_spacing;
         border-top: 1px solid $border;
     }
+
+    .significant-results {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        padding: 8px;
+        background: rgba(119, 185, 108, 0.1);
+        border-radius: 4px;
+    }
 }
