--- a/posthog/templates/email/async_migration_error.html
+++ b/posthog/templates/email/async_migration_error.html
@@ -7,4 +7,4 @@
         {{ error }}
     </code>
 </p>
-{% endblock %}{% block heading %}{{ invitee.first_name }} accepted their PostHog invitation{% endblock %}
+{% endblock %}
