--- a/posthog/templates/email/async_migration_status.html
+++ b/posthog/templates/email/async_migration_status.html
@@ -3,4 +3,4 @@
 <p>
     {{ migration_status_update }} 
 </p>
-{% endblock %}{% block heading %}{{ invitee.first_name }} accepted their PostHog invitation{% endblock %}
+{% endblock %}
