Set page headings to weight 600 instead of 700 to align with design

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -110,7 +110,7 @@ body strong {
     font-size: 28px;
     line-height: 34px;
     margin-top: 0.5em;
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .page-caption {
