--- a/frontend/src/lib/components/PropertiesTable.scss
+++ b/frontend/src/lib/components/PropertiesTable.scss
@@ -3,17 +3,14 @@
 .properties-table-key {
     display: flex;
     align-items: center;
-
-    .anticon-delete {
-        color: $primary;
-        margin-left: 4px;
-    }
+    justify-content: space-between;
 }
 
 .property-value-type {
     display: flex;
     align-items: center;
     width: fit-content;
+    height: 1.25rem;
     padding: 0.125rem 0.25rem;
     letter-spacing: 0.25px;
     border-radius: var(--radius);
