--- a/frontend/src/scenes/persons/Persons.scss
+++ b/frontend/src/scenes/persons/Persons.scss
@@ -1,7 +1,15 @@
 @import '~/vars';
 
 .extra-ids {
-    cursor: pointer;
-    margin-left: 4px;
+    display: inline-flex;
+    align-items: center;
+    height: 1.25rem;
+    line-height: 1.125rem;
+    margin: 0 0 0 0.25rem;
+    padding: 0 0.25rem 0 0.375rem;
     color: $primary;
+    cursor: pointer;
+    svg {
+        margin-left: 0.25rem;
+    }
 }
