--- a/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
+++ b/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
@@ -6,7 +6,7 @@
     font-size: 14px;
     z-index: var(--z-graph-tooltip);
     transition: all 0.4s;
-    max-width: 600px;
+    max-width: 480px;
     border-radius: var(--radius);
     background: #fafafa;
 
@@ -40,6 +40,19 @@
                     white-space: nowrap;
                 }
             }
+
+            .datum-counts-column {
+                .ant-typography {
+                    text-align: left;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2; /* number of lines to show */
+                    line-height: 1rem; /* fallback */
+                    max-height: calc(1rem * 2); /* fallback */
+                }
+            }
         }
 
         .LemonTable__content > table > tbody {
@@ -57,6 +70,17 @@
                 font-weight: 600;
                 display: flex;
                 align-items: center;
+
+                .ant-typography {
+                    text-align: left;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2; /* number of lines to show */
+                    line-height: 1rem; /* fallback */
+                    max-height: calc(1rem * 2); /* fallback */
+                }
             }
             .series-data-cell {
                 font-weight: 600;
