Redesigned person & group pages (#7988)
* Implement new person page layout

* Simplify default 404 page similar to person 404

* Set page headings to weight 600 instead of 700 to align with design

* Fix style of person loading state and page title

* Don't use deprecated `substr`

* Rework `LemonRow` compact mode

* Rework group page too

* Update group 404 message

* Fix `personsLogic`

* Add comment

* Fix type name conflict

* Update Person.cy-spec.js

* Update person.js

* Update Person.cy-spec.js

* Fix display of extra person IDs

* Update Person.cy-spec.js

* Improve property key/value sizing

* Update person.js

* Optimize personsLogic's urlToAction

* Put property deletion button in its own rightmost column

* Add `SessionRecordingsTable` empty state

* Use `IconDeleteForever` instead of `IconClose` for deletion

* Update person.js

* Fix sync of person and cohorts

* Fix "Should merge person"

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -103,20 +103,20 @@ body strong {
 }
 
 .page-title-row {
-    margin-top: 0.5rem;
+    margin: 1.5rem 0 0.75rem;
 }
 
 .page-title {
     font-size: 28px;
     line-height: 34px;
-    margin-top: 0.5em;
-    font-weight: bold;
+    margin: 0;
+    font-weight: 600;
 }
 
 .page-caption {
     @extend .text-default;
-    max-width: 640px;
-    margin-bottom: 16px;
+    max-width: 48rem;
+    margin-bottom: 1rem;
 }
 
 .subtitle-row {
@@ -774,6 +774,7 @@ code.code {
 }
 
 .main-app-content {
+    position: relative; // So that scene-level <Loading/> is positioned correctly.
     min-width: 0;
     padding: 0 2rem 4rem;
 
