--- a/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
+++ b/frontend/src/scenes/insights/InsightTooltip/InsightTooltip.scss
@@ -40,6 +40,19 @@
                     white-space: nowrap;
                 }
             }
+
+            .datum-counts-column {
+                .ant-typography {
+                    text-align: left;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2; /* number of lines to show */
+                    line-height: 1rem; /* fallback */
+                    max-height: calc(1rem * 2); /* fallback */
+                }
+            }
         }
 
         .LemonTable__content > table > tbody {
@@ -57,7 +70,17 @@
                 font-weight: 600;
                 display: flex;
                 align-items: center;
-                height: inherit;
+
+                .ant-typography {
+                    text-align: left;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    display: -webkit-box;
+                    -webkit-box-orient: vertical;
+                    -webkit-line-clamp: 2; /* number of lines to show */
+                    line-height: 1rem; /* fallback */
+                    max-height: calc(1rem * 2); /* fallback */
+                }
             }
             .series-data-cell {
                 font-weight: 600;
