--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -130,6 +130,10 @@
         color: white;
     }
 
+    .archive-experiment {
+        color: $danger;
+    }
+
     .description {
         font-style: italic;
         color: $text_muted;
