--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -14,7 +14,7 @@
         border-color: var(--primary);
     }
     .InsightMeta {
-        border-top: 1px solid var(--border);
+        border-bottom: 1px solid var(--border);
     }
 }
 
@@ -37,17 +37,11 @@
 }
 
 .InsightMeta {
-    padding: 0 1rem;
+    display: flex;
+    padding: 1rem;
     width: 100%;
-    > div {
-        display: flex;
-        padding: 1rem 0;
-        width: 100%;
-        &:not(:last-child) {
-            border-bottom: 1px solid var(--border);
-        }
-    }
     h5 {
+        color: var(--text-muted);
         line-height: 1.5rem;
         margin-bottom: 0;
     }
@@ -65,7 +59,7 @@
 .InsightMeta__ribbon {
     align-self: stretch;
     width: 0.375rem;
-    margin-right: 0.75rem;
+    margin: 0 0.75rem 0 -0.25rem;
     border-radius: var(--radius);
     background: var(--text-muted); // Just a fallback value in case there's some unrecognized value
     &.blue {
