--- a/frontend/src/lib/components/EditableField/EditableField.scss
+++ b/frontend/src/lib/components/EditableField/EditableField.scss
@@ -13,6 +13,7 @@
         border: none;
         background: transparent;
         font: inherit;
+        color: var(--text-default);
     }
     input {
         padding: 0.25rem; // Some padding to give the focus outline more breathing space
