--- a/frontend/src/lib/components/LemonRow/LemonRow.scss
+++ b/frontend/src/lib/components/LemonRow/LemonRow.scss
@@ -1,13 +1,13 @@
 @import '~/vars';
 
 .LemonRow {
-    transition: background-color 200ms ease, color 200ms ease, opacity 200ms ease;
+    transition: background-color 200ms ease, color 200ms ease, border 200ms ease, opacity 200ms ease;
     display: flex;
     flex-direction: column;
     align-items: start;
     justify-content: center;
     min-height: 2.5rem;
-    padding: 0.25rem 0.5rem;
+    padding: 0.25rem 1rem;
     background: none;
     border-radius: var(--radius);
     border: none;
@@ -23,7 +23,6 @@
     }
 
     &.LemonRow--status-danger {
-        font-weight: 600;
         color: var(--danger);
         .LemonRow__icon {
             color: var(--danger);
@@ -59,6 +58,8 @@
 
 .LemonRow--full-width {
     width: 100%;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
     .LemonRow__main-area {
         justify-content: start;
     }
@@ -118,5 +119,14 @@
     margin: 0.5rem 0;
     &--large {
         margin: 1rem 0;
+    }
+    &--vertical {
+        width: 1px;
+        height: auto;
+        margin: 0.5rem;
+        align-self: stretch;
+        &--large {
+            margin: 0.5rem 1rem;
+        }
     }
 }
