--- a/frontend/src/lib/components/LemonRow/LemonRow.scss
+++ b/frontend/src/lib/components/LemonRow/LemonRow.scss
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    min-height: 2.5rem;
+    height: 2.5rem;
     padding: 0.25rem 1rem;
     background: none;
     border-radius: var(--radius);
@@ -76,14 +76,14 @@
 
 .LemonRow--symbolic {
     display: block;
-    min-height: 1.5rem;
+    height: 1.5rem;
     padding: 0;
 }
 
 .LemonRow--compact {
-    min-height: 2rem;
+    height: 2rem;
     &.LemonRow--symbolic {
-        min-height: 1.25rem;
+        height: 1.25rem;
         padding: 0;
     }
     .LemonRow__icon {
