--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -1,3 +1,5 @@
+@import '~/vars';
+
 .InsightCard {
     transition: border 200ms ease;
     position: relative;
@@ -9,7 +11,6 @@
     border: 1px solid var(--border);
     z-index: 3;
     background: #fff;
-    overflow: hidden;
     &--highlighted {
         border-color: var(--primary);
     }
@@ -103,4 +104,32 @@
     color: var(--text-muted);
     max-height: 7em; // Display at most 4.5 lines at once, then scroll
     overflow: auto;
+}
+
+.handle {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    pointer-events: none;
+    z-index: $z_raised;
+    &.horizontal {
+        svg {
+            transform: rotate(90deg) translateX(0.75rem);
+        }
+    }
+    &.vertical {
+        flex-direction: column;
+        svg {
+            transform: translateX(0.5rem);
+        }
+    }
+    &.corner {
+        justify-content: flex-end;
+        svg {
+            transform: translate(0.5rem, 0.5rem);
+        }
+    }
 }
