--- a/frontend/src/scenes/dashboard/Dashboard.scss
+++ b/frontend/src/scenes/dashboard/Dashboard.scss
@@ -84,7 +84,7 @@
             position: relative;
 
             &::after {
-                @extend .mixin-gradient-overlay;
+                @extend %mixin-gradient-overlay;
                 width: calc(100% - 16px); // .ant-row gutter
                 left: 8px;
                 height: 150px;
