--- a/frontend/src/vars.scss
+++ b/frontend/src/vars.scss
@@ -120,7 +120,7 @@ $light-grey: #f2f2f2;
         0 32px 48px rgba(0, 0, 0, 0.05) !important;
 }
 
-.mixin-gradient-overlay {
+%mixin-gradient-overlay {
     content: '';
     width: 100%;
     height: 3rem;
@@ -130,7 +130,7 @@ $light-grey: #f2f2f2;
     bottom: 0;
 }
 
-.mixin-gradient-overlay-right {
+%mixin-gradient-overlay-right {
     content: '';
     width: 3rem;
     height: 100%;
