much easier if you are not allowed to edit pinned filters

--- a/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
+++ b/frontend/src/lib/components/PropertyFilters/components/FilterRow.scss
@@ -30,6 +30,10 @@
         text-shadow: none;
         box-shadow: none;
     }
+
+    .pinned-filter {
+        cursor: not-allowed;
+    }
 }
 
 .property-filters {
