Fix funnel display

--- a/frontend/src/scenes/insights/InsightTabs/FunnelTab/FunnelStepTable.scss
+++ b/frontend/src/scenes/insights/InsightTabs/FunnelTab/FunnelStepTable.scss
@@ -1,6 +1,7 @@
 @import '~/vars';
 
-.dashboard-item-container {
+.dashboard-item-container,
+.InsightCard {
     .funnel-steps-table {
         margin: 0 !important;
     }
@@ -274,6 +275,7 @@
                 .ant-table-container {
                     display: flex;
                     flex-flow: column nowrap;
+                    height: 100%;
 
                     .ant-table-header {
                         flex: none;
