--- a/frontend/src/scenes/insights/InsightsTable/InsightsTable.scss
+++ b/frontend/src/scenes/insights/InsightsTable/InsightsTable.scss
@@ -1,5 +1,14 @@
 @import '~/vars';
 
+.insights-table.LemonTable--embedded {
+    border-top: 1px solid var(--border);
+}
+.dashboard .insights-table {
+    margin: -1rem;
+    flex-grow: 1;
+    border-top: none;
+}
+
 .series-name-wrapper-col {
     display: flex;
     align-items: center;
