Insight card polishes (#8196)
* Use default time range

* Highlight highlighted cards moar

* Make the dashboard item resizing placeholder more obvious

* Adjust resizing handle sizing

* Fix funnel display

* Improve table display

* Fix paths overflow

* Fix viz padding

--- a/frontend/src/lib/components/InsightCard/InsightCard.scss
+++ b/frontend/src/lib/components/InsightCard/InsightCard.scss
@@ -13,6 +13,7 @@
     background: #fff;
     &--highlighted {
         border-color: var(--primary);
+        outline: 1px solid var(--primary);
     }
     .InsightMeta {
         border-bottom: 1px solid var(--border);
@@ -23,10 +24,8 @@
     position: relative;
     flex-grow: 1;
     display: flex;
-    align-items: center;
     justify-content: center;
     min-height: 0;
-    padding: 1rem;
     overflow: auto;
     .graph-container {
         padding: 1rem;
