--- a/frontend/src/scenes/experiments/Experiment.scss
+++ b/frontend/src/scenes/experiments/Experiment.scss
@@ -2,6 +2,7 @@
 
 .experiment-form {
     .metrics-selection {
+        width: 100%;
         border-top: 1px solid $border;
         padding-top: $default_spacing;
         margin-top: $default_spacing;
@@ -92,16 +93,17 @@
         border-bottom: 1px solid $border;
     }
 
-    .feature-flag-variant {
+    .variants {
         border: 1px solid $border;
         border-radius: 4px;
-        padding-left: 12px;
-        padding-top: $default_spacing / 2;
-        padding-bottom: $default_spacing / 2;
-        margin-top: 20px;
-
-        .ant-form-item-explain-error {
-            padding-top: $default_spacing / 2;
+        padding-left: $default_spacing;
+        margin-top: $default_spacing / 2;
+        margin-bottom: $default_spacing;
+        .feature-flag-variant {
+            margin-top: 20px;
+            .ant-form-item-explain-error {
+                padding-top: $default_spacing / 2;
+            }
         }
     }
 
