--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -103,10 +103,18 @@ body strong {
 }
 
 .page-title-row {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 0.5rem 1rem;
     margin: 1.5rem 0 0.75rem;
+    @media screen and (min-width: $md) {
+        flex-wrap: nowrap;
+    }
 }
 
 .page-title {
+    min-width: 0;
     font-size: 28px;
     line-height: 34px;
     margin: 0;
@@ -117,6 +125,15 @@ body strong {
     @extend .text-default;
     max-width: 48rem;
     margin-bottom: 1rem;
+}
+
+.page-buttons {
+    flex-shrink: 0;
+    flex-grow: 1;
+    display: flex;
+    align-items: center;
+    justify-content: right;
+    gap: 0.5rem;
 }
 
 .subtitle-row {
@@ -334,6 +351,12 @@ code.code {
 .flex-center {
     display: flex;
     align-items: center;
+}
+
+// Vendor-specific adjustments
+
+input::-ms-clear {
+    display: none; // Hide IE/Edge's clear button that can mess input sizing up
 }
 
 // Color styles
