Add enter/exit animation to `Popup`

--- a/frontend/src/lib/components/Popup/Popup.scss
+++ b/frontend/src/lib/components/Popup/Popup.scss
@@ -1,7 +1,19 @@
 @import '~/vars';
 
 .Popup {
+    perspective: 1000px;
     z-index: $z_popup;
+    h5 {
+        margin: 0.25rem 0.5rem;
+    }
+    p:last-child {
+        margin-bottom: 0;
+    }
+}
+
+.Popup__box {
+    transition: opacity 100ms ease, transform 100ms ease;
+    transform-origin: top;
     box-shadow: $shadow_popup;
     background: #fff;
     padding: 0.5rem;
@@ -10,14 +22,18 @@
     max-width: calc(100vw - 1rem);
     max-height: calc(100vh - 6rem);
     overflow: auto;
-    &--actionable {
+    .Popup--actionable & {
         border-color: var(--primary);
     }
-    h5 {
-        margin: 0.25rem 0.5rem;
+    .Popup--enter &,
+    .Popup--exit.Popup--exit-active & {
+        opacity: 0;
+        transform: rotateX(-15deg);
     }
-    p:last-child {
-        margin-bottom: 0;
+    .Popup--enter.Popup--enter-active &,
+    .Popup--exit & {
+        opacity: 1;
+        transform: rotateX(0);
     }
 }
 
